Mon Sep 17 14:45:48 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixed a problem with global var override
	  being reported as an error.
	* tests/docs/Makefile.am tests/docs/bug-61.xml
	  tests/general/Makefile.am tests/general/bug-61.*: added a 
	  specific example in the regression tests
	* configure.in tests/Makefile.am tests/reports/*: adding a test
	  to make sure redefinition of global variables in the same stylesheet
	  are still reported

Sat Sep 15 17:32:16 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c: okay the code from Norm is really non
	  portable and break everywhere except on Sun and Linux
	  platform. Compile it only on those targets.

Sat Sep 15 06:25:02 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/date.c: fixed some bugs (reported by Charles Bozeman
	  and Justin Fletcher)

Fri Sep 14 15:22:30 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: Fixing bug #60415 
	* tests/docs/Makefile.am tests/docs/bug-61.xml
	  tests/general/Makefile.am tests/general/bug-61.*: added a 
	  specific example in the regression tests

Fri Sep 14 12:42:22 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* tests/docbook/result/*: the change in libxml to output
	  decimal charrefs instead of hexadecimal changed a lot of
	  docbook results

Thu Sep 13 15:30:01 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in doc/Makefile.am: install xsltproc man page

Wed Sep 12 21:09:53 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing for 1.0.4
	* doc/xslt.html doc/html/*: updated and regenerated docs

Wed Sep 12 18:10:33 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/date.c: fixed some compile warnings and disabled
	  debugging by default.

Wed Sep 12 17:00:53 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* win32/dsp/libxslt.def libxslt/variables.[ch]: trying to
	  incorporate comments from bug #59220
