@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
+
+a not allowed top level element
+
+<xsl:template match="/">
+
+</xsl:template>
+</xsl:stylesheet>
+
